@@ -70,6 +70,9 @@ Version CVS HEAD (?)
     real-time instrument scripts. Instrument scripts are a LinuxSampler
     extension of the original Giga format and will not load with the
     GigaStudio software.
+  * GIG SOUND FORMAT EXTENSION: Added support for managing script slots for
+    instruments. Script slots define which scripts shall be executed for an
+    instrument by the sampler and in which order.
 
 Version 0.2.0 (2009-07-31)
 
